[MODIFY]: Home screen headrs alignment

--- a/index.html
+++ b/index.html
@@ -17,18 +17,14 @@
     <link rel="stylesheet" href="css/footer.css" />
   </head>
   <body class="home-page">
-    <header class="header" >
+    <header class="header">
       <nav class="navbar">
         <div class="menu-toggle" id="menu-toggle">
           <i class="fas fa-bars"></i>
         </div>
 
         <div class="logo">
-          <img
-            src="assets/images/logo.png"
-            alt="logo"
-            class="logo-icon"
-          />
+          <img src="assets/images/logo.png" alt="logo" class="logo-icon" />
           <h2>Yantrickaa</h2>
         </div>
 
@@ -52,7 +48,7 @@
           Everything you need to access and manage your business — in one
           interface.
         </p>
-        <a href="#" class="btn">About Us</a>
+        <a href="pages/about.html" class="btn">About Us</a>
       </div>
     </header>
     <main>
@@ -74,7 +70,10 @@
 
           <div class="industry-card" style="background-color: #f460e3">
             <h3>Healthcare</h3>
-            <img src="assets/images/home/industry/healthcare.png" alt="Healthcare" />
+            <img
+              src="assets/images/home/industry/healthcare.png"
+              alt="Healthcare"
+            />
           </div>
 
           <div class="industry-card" style="background-color: #e7e850">
@@ -82,10 +81,13 @@
               Software &<br />
               Hi-tech
             </h3>
-            <img src="assets/images/home/industry/software.png" alt="Software" />
+            <img
+              src="assets/images/home/industry/software.png"
+              alt="Software"
+            />
           </div>
 
-          <div class="industry-card" style="background-color: #4BC8D5">
+          <div class="industry-card" style="background-color: #4bc8d5">
             <h3>SaaS & Ecommerce</h3>
             <img src="assets/images/home/industry/saas.png" alt="Saas" />
           </div>
@@ -97,19 +99,23 @@
 
           <div class="industry-card" style="background-color: #f9a26c">
             <h3>RealEstate</h3>
-            <img src="assets/images/home/industry/realstate.png" alt="RealEstate" />
+            <img
+              src="assets/images/home/industry/realstate.png"
+              alt="RealEstate"
+            />
           </div>
         </div>
       </section>
 
       <!-- Partner Ecosystem Section -->
       <section class="partners">
-        <h2>Our Partner Ecosystem</h2>
-        <p>
-          Bringing together the best of our partner network to create
-          competitive advantage for your business.
-        </p>
-
+        <div class="partner-heading" >
+          <h2>Our Partner Ecosystem</h2>
+          <p>
+            Bringing together the best of our partner network to create
+            competitive advantage for your business.
+          </p>
+        </div>
         <div class="partner-logos">
           <div class="logo-box">
             <img src="assets/images/home/partener/meta.png" alt="Meta" />
@@ -249,7 +255,10 @@
               />
 
               <!-- duplicate -->
-              <img src="assets/images/home/partener/dkRaj.png" alt="Dkraj Jewels" />
+              <img
+                src="assets/images/home/partener/dkRaj.png"
+                alt="Dkraj Jewels"
+              />
               <img
                 src="assets/images/home/partener/malkiatiLogo.png"
                 alt="Malkiati"
