[UPDATE]: css routes in pages

--- a/pages/career.html
+++ b/pages/career.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>career</title>
-    <link rel="stylesheet" href="/css/main.css" />
-    <link rel="stylesheet" href="/css/footer.css" />
-    <link rel="stylesheet" href="/css/career/cardgrid.css" />
-    <link rel="stylesheet" href="/css/career/form.css" />
+    <link rel="stylesheet" href="../css/main.css" />
+    <link rel="stylesheet" href="../css/footer.css" />
+    <link rel="stylesheet" href="../css/career/cardgrid.css" />
+    <link rel="stylesheet" href="../css/career/form.css" />
 
     <link
       rel="stylesheet"
@@ -16,17 +16,13 @@
   </head>
   <body class="career-page">
     <header class="header">
-       <nav class="navbar">
+      <nav class="navbar">
         <div class="menu-toggle" id="menu-toggle">
           <i class="fas fa-bars"></i>
         </div>
 
         <div class="logo">
-          <img
-            src="../assets/images/logo.png"
-            alt="logo"
-            class="logo-icon"
-          />
+          <img src="../assets/images/logo.png" alt="logo" class="logo-icon" />
           <h2>Yantrickaa</h2>
         </div>
 
@@ -42,7 +38,8 @@
           <li><a href="service.html">Services</a></li>
           <li><a href="career.html">Career</a></li>
         </div>
-      </nav>f
+      </nav>
+      f
       <div class="hero-content">
         <h1>About Yantrickaa</h1>
         <p>
