--- a/pages/service.html
+++ b/pages/service.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>service</title>
-    <link rel="stylesheet" href="/css/main.css" />
-    <link rel="stylesheet" href="/css/footer.css" />
-    <link rel="stylesheet" href="/css/about-us/service.css" />
-    <link rel="stylesheet" href="/css/about-us/tech.css" />
-    <link rel="stylesheet" href="/css/about-us/success.css" />
+    <link rel="stylesheet" href="../css/main.css" />
+    <link rel="stylesheet" href="../css/footer.css" />
+    <link rel="stylesheet" href="../css/about-us/service.css" />
+    <link rel="stylesheet" href="../css/about-us/tech.css" />
+    <link rel="stylesheet" href="../css/about-us/success.css" />
 
     <link
       rel="stylesheet"
