--- a/pages/product.html
+++ b/pages/product.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>product</title>
-    <link rel="stylesheet" href="/css/main.css" />
-    <link rel="stylesheet" href="/css/footer.css" />
+    <link rel="stylesheet" href="../css/main.css" />
+    <link rel="stylesheet" href="../css/footer.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
@@ -19,11 +19,7 @@
         </div>
 
         <div class="logo">
-          <img
-            src="../assets/images/logo.png"
-            alt="logo"
-            class="logo-icon"
-          />
+          <img src="../assets/images/logo.png" alt="logo" class="logo-icon" />
           <h2>Yantrickaa</h2>
         </div>
 
