[ADD]:service tech image

--- a/pages/service.html
+++ b/pages/service.html
@@ -145,33 +145,142 @@
           <div class="tech-grid">
             <div class="tech-item">
               <img
-                style="background-color: #fff; padding: 10px 8px"
-                src="https://storage.googleapis.com/cms-storage-bucket/flutter-logo.6a07d8a62f4308d2b854.svg"
+                src="../assets/images/service/technology/flutter.png"
                 alt="Flutter"
               />
             </div>
-            <div class="tech-item"><img src="" alt="React" /></div>
-            <div class="tech-item"><img src="" alt="Node.js" /></div>
-            <div class="tech-item"><img src=" alt="Java"></div>
-            <div class="tech-item"><img src="" alt="Tailwind CSS" /></div>
-            <div class="tech-item"><img src="" alt="HTML5" /></div>
-            <div class="tech-item"><img src="" alt="CSS3" /></div>
-            <div class="tech-item"><img src="" alt="JavaScript" /></div>
-            <div class="tech-item"><img src="" alt="TypeScript" /></div>
-            <div class="tech-item"><img src="" alt="Python" /></div>
-            <div class="tech-item"><img src="" alt="MySQL" /></div>
-            <div class="tech-item"><img src="" alt="MongoDB" /></div>
-            <div class="tech-item"><img src="" alt="PostgreSQL" /></div>
-            <div class="tech-item"><img src="" alt="Firebase" /></div>
-            <div class="tech-item"><img src="" alt="Redis" /></div>
-            <div class="tech-item"><img src="" alt="Kafka" /></div>
-            <div class="tech-item"><img src="" alt="RabbitMQ" /></div>
-            <div class="tech-item"><img src="" alt="Kubernetes" /></div>
-            <div class="tech-item"><img src="" alt="AWS" /></div>
-            <div class="tech-item"><img src="" alt="Azure" /></div>
-            <div class="tech-item"><img src="" alt="Google Cloud" /></div>
-            <div class="tech-item"><img src="" alt="Docker" /></div>
-            <div class="tech-item"><img src="" alt="Grafana" /></div>
+            <div class="tech-item">
+              <img
+                src="../assets/images/service/technology/react.png"
+                alt="React"
+              />
+            </div>
+            <div class="tech-item">
+              <img
+                src="../assets/images/service/technology/node.png"
+                alt="Node.js"
+              />
+            </div>
+            <div class="tech-item">
+              <img
+                src="../assets/images/service/technology/java.png"
+                alt="Java"
+              />
+            </div>
+            <div class="tech-item">
+              <img
+                src="../assets/images/service/technology/tailwind.png"
+                alt="Tailwind CSS"
+              />
+            </div>
+            <div class="tech-item">
+              <img
+                src="../assets/images/service/technology/html.png"
+                alt="HTML5"
+              />
+            </div>
+            <div class="tech-item">
+              <img
+                src="../assets/images/service/technology/css.png"
+                alt="CSS3"
+              />
+            </div>
+            <div class="tech-item">
+              <img
+                src="../assets/images/service/technology/javascript.png"
+                alt="JavaScript"
+              />
+            </div>
+            <div class="tech-item">
+              <img
+                src="../assets/images/service/technology/typscript.png"
+                alt="TypeScript"
+              />
+            </div>
+            <div class="tech-item">
+              <img
+                src="../assets/images/service/technology/pythone.png"
+                alt="Python"
+              />
+            </div>
+            <div class="tech-item">
+              <img
+                src="../assets/images/service/technology/mySQL.png"
+                alt="MySQL"
+              />
+            </div>
+            <div class="tech-item">
+              <img
+                src="../assets/images/service/technology/mongodb.png"
+                alt="MongoDB"
+              />
+            </div>
+            <div class="tech-item">
+              <img
+                src="../assets/images/service/technology/postgress.png"
+                alt="PostgreSQL"
+              />
+            </div>
+            <div class="tech-item">
+              <img
+                src="../assets/images/service/technology/firebase.png"
+                alt="Firebase"
+              />
+            </div>
+            <div class="tech-item">
+              <img
+                src="../assets/images/service/technology/raddies.png"
+                alt="Redis"
+              />
+            </div>
+            <div class="tech-item">
+              <img
+                src="../assets/images/service/technology/kafka.png"
+                alt="Kafka"
+              />
+            </div>
+            <div class="tech-item">
+              <img
+                src="../assets/images/service/technology/rabbitMQ.png"
+                alt="RabbitMQ"
+              />
+            </div>
+            <div class="tech-item">
+              <img
+                src="../assets/images/service/technology/kubernate.png"
+                alt="Kubernetes"
+              />
+            </div>
+            <div class="tech-item">
+              <img
+                src="../assets/images/service/technology/aws.png"
+                alt="AWS"
+              />
+            </div>
+            <div class="tech-item">
+              <img
+                src="../assets/images/service/technology/azure.png"
+                alt="Azure"
+              />
+            </div>
+            <div class="tech-item">
+              <img
+                src="../assets/images/service/technology/"
+                alt="Google Cloud"
+              />
+            </div>
+            <div class="tech-item">
+              <img
+                src="../assets/images/service/technology/docker.png"
+                alt="Docker"
+              />
+            </div>
+            <div class="tech-item">
+              <img
+                src="../assets/images/service/technology/grafana.png"
+                alt="Grafana"
+              />
+            </div>
           </div>
         </div>
       </section>
@@ -368,6 +477,24 @@
       <div class="footer-bottom">
         <div class="footer-brand">
           <h2>Yantrikaa</h2>
+          <div class="footer-right">
+            <div class="footer-links-center">
+              <a href="#">Privacy Policy</a>
+              <a href="#">Terms & Conditions</a>
+              <a href="#">Cookie Preferences</a>
+            </div>
+
+            <div class="social-links">
+              <span>Follow us</span>
+              <a href="#"><i class="fab fa-linkedin"></i></a>
+              <a href="#"><i class="fab fa-facebook"></i></a>
+              <a href="#"><i class="fab fa-x-twitter"></i></a>
+              <a href="#"><i class="fab fa-instagram"></i></a>
+              <a href="#"><i class="fab fa-whatsapp"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="footer-paragraph-container">
           <p>
             Boston Consulting Group is an Equal Opportunity Employer. All
             qualified applicants will receive consideration for employment
@@ -386,27 +513,12 @@
             access the Federal No Surprises Bill Act Disclosure.
           </p>
 
-          <p>© 2025 Yantrikaa Infotech Pvt Ltd</p>
-        </div>
-
-        <div class="footer-right">
-          <div class="footer-links-right">
-            <a href="#">Privacy Policy</a>
-            <a href="#">Terms & Conditions</a>
-            <a href="#">Cookie Preferences</a>
-          </div>
-
-          <div class="social-links">
-            <span>Follow us</span>
-            <a href="#"><i class="fab fa-linkedin"></i></a>
-            <a href="#"><i class="fab fa-facebook"></i></a>
-            <a href="#"><i class="fab fa-x-twitter"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-whatsapp"></i></a>
-          </div>
+          <p class="copyright">© 2025 Yantrikaa Infotech Pvt Ltd</p>
         </div>
       </div>
     </footer>
+    <div class="overlay" id="overlay"></div>
+
     <script src="../js/main.js"></script>
   </body>
 </html>
