[UPDATE]: footer link

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
       <!-- Partner Ecosystem Section -->
       <section class="partners">
-        <div class="partner-heading" >
+        <div class="partner-heading">
           <h2>Our Partner Ecosystem</h2>
           <p>
             Bringing together the best of our partner network to create
@@ -227,7 +227,7 @@
       </section>
 
       <!-- partners-marquee Section -->
-      <section class="partners-marquee">
+      <section class="partners-marquee" id="partners">
         <h2>Our Partners</h2>
         <p>
           Partnership is one of BCG’s core values. We collaborate across a
@@ -293,37 +293,6 @@
             alt="World Map"
             class="world-map"
           />
-
-          <!-- Location markers -->
-          <div class="location" style="top: 50%; left: 25%">
-            <span class="dot"></span>
-            <span class="label">USA</span>
-          </div>
-
-          <div class="location" style="top: 32%; left: 53%">
-            <span class="dot"></span>
-            <span class="label">SWEDEN</span>
-          </div>
-
-          <div class="location" style="top: 45%; left: 57%">
-            <span class="dot"></span>
-            <span class="label">QATAR</span>
-          </div>
-
-          <div class="location" style="top: 55%; left: 52%">
-            <span class="dot"></span>
-            <span class="label">SAUDI ARABIA</span>
-          </div>
-
-          <div class="location" style="top: 58%; left: 65%">
-            <span class="dot"></span>
-            <span class="label">INDIA</span>
-          </div>
-
-          <div class="location" style="top: 80%; left: 70%">
-            <span class="dot"></span>
-            <span class="label">AUSTRALIA</span>
-          </div>
         </div>
 
         <div class="cta-container-parent">
@@ -345,16 +314,16 @@
 
         <div class="footer-links">
           <ul>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Partners</a></li>
-            <li><a href="#">Products</a></li>
-            <li><a href="#">Services</a></li>
+            <li><a href="pages/about.html">About Us</a></li>
+            <li><a href="#partners">Partners</a></li>
+            <li><a href="pages/product.html">Products</a></li>
+            <li><a href="pages/service.html">Services</a></li>
           </ul>
           <ul>
-            <li><a href="#">Careers</a></li>
-            <li><a href="#">Blogs</a></li>
-            <li><a href="#">Mentors</a></li>
-            <li><a href="#">CSR</a></li>
+            <li><a href="pages/career.html">Careers</a></li>
+            <li><a href="pages/upcoming.html">Blogs</a></li>
+            <li><a href="pages/about.html#mentors">Mentors</a></li>
+            <li><a href="pages/upcoming.html">CSR</a></li>
           </ul>
         </div>
 
@@ -380,18 +349,28 @@
           <h2>Yantrikaa</h2>
           <div class="footer-right">
             <div class="footer-links-center">
-              <a href="#">Privacy Policy</a>
-              <a href="#">Terms & Conditions</a>
-              <a href="#">Cookie Preferences</a>
+              <a href="pages/privacy-policy.html">Privacy Policy</a>
+              <a href="pages/term-condition.html">Terms & Conditions</a>
+              <a href="pages/upcoming.html">Cookie Preferences</a>
             </div>
 
             <div class="social-links">
               <span>Follow us</span>
-              <a href="#"><i class="fab fa-linkedin"></i></a>
-              <a href="#"><i class="fab fa-facebook"></i></a>
-              <a href="#"><i class="fab fa-x-twitter"></i></a>
-              <a href="#"><i class="fab fa-instagram"></i></a>
-              <a href="#"><i class="fab fa-whatsapp"></i></a>
+              <a target="_blank" href="https://www.linkedin.com/"
+                ><i class="fab fa-linkedin"></i
+              ></a>
+              <a target="_blank" href="https://www.facebook.com/"
+                ><i class="fab fa-facebook"></i
+              ></a>
+              <a target="_blank" href="https://www.x.com/"
+                ><i class="fab fa-x-twitter"></i
+              ></a>
+              <a target="_blank" href="https://www.instagram.com/"
+                ><i class="fab fa-instagram"></i
+              ></a>
+              <a target="_blank" href="https://web.whatsapp.com/"
+                ><i class="fab fa-whatsapp"></i
+              ></a>
             </div>
           </div>
         </div>
@@ -410,8 +389,9 @@
           <p>
             Pursuant to Transparency in Coverage final rules (85 FR 72158) set
             forth in the United States by The Departments of the Treasury,
-            Labor, and Health and Human Services click <a href="#">here</a> to
-            access the Federal No Surprises Bill Act Disclosure.
+            Labor, and Health and Human Services click
+            <a target="_blank" href="pages/upcoming.html">here</a> to access the
+            Federal No Surprises Bill Act Disclosure.
           </p>
 
           <p class="copyright">© 2025 Yantrikaa Infotech Pvt Ltd</p>
