--- a/pages/service.html
+++ b/pages/service.html
@@ -444,16 +444,16 @@
 
         <div class="footer-links">
           <ul>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Partners</a></li>
-            <li><a href="#">Products</a></li>
-            <li><a href="#">Services</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="../index.html#partners">Partners</a></li>
+            <li><a href="product.html">Products</a></li>
+            <li><a href="service.html">Services</a></li>
           </ul>
           <ul>
-            <li><a href="#">Careers</a></li>
-            <li><a href="#">Blogs</a></li>
-            <li><a href="#">Mentors</a></li>
-            <li><a href="#">CSR</a></li>
+            <li><a href="career.html">Careers</a></li>
+            <li><a href="upcoming.html">Blogs</a></li>
+            <li><a href="about.html#mentors">Mentors</a></li>
+            <li><a href="upcoming.html">CSR</a></li>
           </ul>
         </div>
 
@@ -479,18 +479,28 @@
           <h2>Yantrikaa</h2>
           <div class="footer-right">
             <div class="footer-links-center">
-              <a href="#">Privacy Policy</a>
-              <a href="#">Terms & Conditions</a>
-              <a href="#">Cookie Preferences</a>
+              <a href="privacy-policy.html">Privacy Policy</a>
+              <a href="term-condition.html">Terms & Conditions</a>
+              <a href="upcoming.html">Cookie Preferences</a>
             </div>
 
             <div class="social-links">
               <span>Follow us</span>
-              <a href="#"><i class="fab fa-linkedin"></i></a>
-              <a href="#"><i class="fab fa-facebook"></i></a>
-              <a href="#"><i class="fab fa-x-twitter"></i></a>
-              <a href="#"><i class="fab fa-instagram"></i></a>
-              <a href="#"><i class="fab fa-whatsapp"></i></a>
+              <a target="_blank" href="https://www.linkedin.com/"
+                ><i class="fab fa-linkedin"></i
+              ></a>
+              <a target="_blank" href="https://www.facebook.com/"
+                ><i class="fab fa-facebook"></i
+              ></a>
+              <a target="_blank" href="https://www.x.com/"
+                ><i class="fab fa-x-twitter"></i
+              ></a>
+              <a target="_blank" href="https://www.instagram.com/"
+                ><i class="fab fa-instagram"></i
+              ></a>
+              <a target="_blank" href="https://web.whatsapp.com/"
+                ><i class="fab fa-whatsapp"></i
+              ></a>
             </div>
           </div>
         </div>
@@ -509,8 +519,9 @@
           <p>
             Pursuant to Transparency in Coverage final rules (85 FR 72158) set
             forth in the United States by The Departments of the Treasury,
-            Labor, and Health and Human Services click <a href="#">here</a> to
-            access the Federal No Surprises Bill Act Disclosure.
+            Labor, and Health and Human Services click
+            <a target="_blank" href="upcoming.html">here</a> to access the
+            Federal No Surprises Bill Act Disclosure.
           </p>
 
           <p class="copyright">© 2025 Yantrikaa Infotech Pvt Ltd</p>
