[ADD]: main content product page

--- a/pages/product.html
+++ b/pages/product.html
@@ -6,6 +6,9 @@
     <title>product</title>
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="../css/footer.css" />
+    <link rel="stylesheet" href="../css/product/product-card.css" />
+    <link rel="stylesheet" href="../css/product/stats.css" />
+    <link rel="stylesheet" href="../css/product/pos-section.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
@@ -38,16 +41,281 @@
       </nav>
 
       <div class="hero-content">
-        <h1>About Yantrickaa</h1>
+        <h1>Our Products</h1>
         <p>
-          Yantrikaa is a global consulting firm that partners with leaders in
-          business and society to tackle their most important challenges and
-          capture their greatest opportunities.
+          We offer a comprehensive range of technology services to help your
+          business thrive in the digital age.
         </p>
-        <a href="#" class="btn">View video</a>
+        <a href="#" class="btn transparent-btn">View video</a>
       </div>
     </header>
 
+    <main class="main-content">
+      <section class="products">
+        <p class="products-desc">
+          Our products caters Various domains include Banking, Credit Societies,
+          Restaurants, Retail, Real estate companies, Manufacturing industries,
+          etc.
+        </p>
+
+        <div class="products-container">
+          <!-- CARD 1 -->
+          <div class="product-card">
+            <div class="product-img">
+              <img src="../assets/images/product/pos.png" alt="POSware Logo" />
+            </div>
+            <h3>YantrikaPOS</h3>
+            <p class="subtitle">POS & Restaurant Management System.</p>
+            <p class="details">
+              DPOS is Point of sale software that manages Staff, Inventory,
+              Billing and Analytics.
+            </p>
+            <a href="#" class="read-more">Read More ↗</a>
+          </div>
+
+          <!-- CARD 2 -->
+          <div class="product-card">
+            <div class="product-img">
+              <img src="../assets/images/product/pos.png" alt="POSware Logo" />
+            </div>
+            <h3>YantrikaPOS</h3>
+            <p class="subtitle">POS & Restaurant Management System.</p>
+            <p class="details">
+              DPOS is Point of sale software that manages Staff, Inventory,
+              Billing and Analytics.
+            </p>
+            <a href="#" class="read-more">Read More ↗</a>
+          </div>
+
+          <!-- CARD 3 -->
+          <div class="product-card">
+            <div class="product-img">
+              <img src="../assets/images/product/pos.png" alt="POSware Logo" />
+            </div>
+            <h3>YantrikaPOS</h3>
+            <p class="subtitle">POS & Restaurant Management System.</p>
+            <p class="details">
+              DPOS is Point of sale software that manages Staff, Inventory,
+              Billing and Analytics.
+            </p>
+            <a href="#" class="read-more">Read More ↗</a>
+          </div>
+        </div>
+      </section>
+      <section class="stats-section">
+        <div class="stats-card">
+          <div class="stat-item">
+            <h2>3</h2>
+            <p>Enterprise<br />Products</p>
+          </div>
+
+          <div class="stats-divider"></div>
+
+          <div class="stat-item">
+            <h2>16+</h2>
+            <p>Partners<br />Worldwide</p>
+          </div>
+
+          <div class="stats-divider"></div>
+
+          <div class="stat-item">
+            <h2>6+</h2>
+            <p>Countries<br />Served</p>
+          </div>
+
+          <div class="stats-divider"></div>
+
+          <div class="stat-item">
+            <h2>2900+</h2>
+            <p>Users<br />Onboarded</p>
+          </div>
+        </div>
+      </section>
+
+      <!-- ================== Pos Section ================== -->
+      <section class="pos-section">
+        <div class="pos-header">
+          <div class="left">
+            <div class="pos-left-text">
+              <h2>YantrikaPOS</h2>
+              <h4>YantrikaPOS - The Future of<br />Point of Sale System.</h4>
+            </div>
+            <div class="highlight-box">
+              <h3>Yantrika<span>POS</span></h3>
+            </div>
+          </div>
+          <div class="pos-image">
+            <img
+              src="../assets/images/product/posInfo.png"
+              alt="YantrikaPOS System"
+            />
+          </div>
+        </div>
+        <div class="text-container">
+          <p>
+            YantrikaPOS is designed to streamline retail/restaurant operations,
+            providing businesses with the tools they need to manage their
+            operations efficiently. LithosPOS integrates with other systems such
+            as accounting software, marketing tools, inventory management
+            systems, CRM software, and other payment systems.
+          </p>
+
+          <p>
+            We integrate with over 50 payment providers and have analytical
+            account integration with SAP, Oracle Cloud, and Zoho Book. It’s used
+            by 6,000+ businesses across 70+ countries and supports 5 languages.
+            We also provide aggregator integrations with Uber Eats, DoorDash,
+            Deliveroo, GrubHub, and more.
+          </p>
+
+          <h3 class="features-title">Key Features of YantrikaPOS</h3>
+
+          <div class="features-grid">
+            <span class="feature">Inventory Management</span>
+            <span class="feature">User Access Management</span>
+            <span class="feature">Invoicing and Billing</span>
+            <span class="feature">Logistics Management</span>
+
+            <span class="feature">Recipe Management</span>
+            <span class="feature">QR & Table Booking</span>
+            <span class="feature">Zomato & Swiggy Integration</span>
+            <span class="feature">Budgeting and Analytics</span>
+          </div>
+        </div>
+      </section>
+      <div class="divider"></div>
+      <!-- ================== DB Section ================== -->
+
+      <section class="pos-section">
+        <div class="pos-header">
+          <div class="left">
+            <div class="pos-left-text">
+              <h2>YantrikaDB</h2>
+              <h4>YantrikaDB - Society<br />Management & Core Banking</h4>
+            </div>
+            <div class="highlight-box">
+              <h3 style="color: #333dff; font-weight: 700">
+                Yantrika<span style="color: #fb7500">DB</span>
+              </h3>
+            </div>
+          </div>
+          <div class="pos-image">
+            <img
+              src="../assets/images/product/DBPrensenting.png"
+              alt="YantrikaPOS System"
+            />
+          </div>
+        </div>
+        <div class="text-container">
+          <p>
+            YantrikaDB is designed to streamline retail/restaurant operations,
+            providing businesses with the tools they need to manage their
+            operations efficiently. LithosPOS integrates with other systems such
+            as accounting software, marketing tools, inventory management
+            systems, CRM software, and other payment systems.
+          </p>
+
+          <p>
+            We integrate with over 50 payment providers and have analytical
+            account integration with SAP, Oracle Cloud, and Zoho Book. It’s used
+            by 6,000+ businesses across 70+ countries and supports 5 languages.
+            We also provide aggregator integrations with Uber Eats, DoorDash,
+            Deliveroo, GrubHub, and more.
+          </p>
+
+          <h3 class="features-title">Key Features of YantrikaDB</h3>
+
+          <div class="features-grid">
+            <span id="db-feature" class="feature">Fixed Deposit FD</span>
+            <span id="db-feature" class="feature">Recurring Deposit RD</span>
+            <span id="db-feature" class="feature">Shares Purchase & Sell</span>
+            <span id="db-feature" class="feature">Loan Management </span>
+
+            <span id="db-feature" class="feature">Daily Reporting</span>
+            <span id="db-feature" class="feature">MIS Report</span>
+            <span id="db-feature" class="feature">Personal Member Ledger</span>
+            <span id="db-feature" class="feature">Dividend & Others</span>
+
+            <span id="db-feature" class="feature">OTP - Account Security</span>
+            <span id="db-feature" class="feature">Encrypted Private data</span>
+            <span id="db-feature" class="feature"
+              >SMS & WhatsApp Integrated</span
+            >
+            <span id="db-feature" class="feature">Web & Mobile Friendly</span>
+          </div>
+        </div>
+      </section>
+
+      <div class="divider"></div>
+
+      <!-- ================== Portal Section ================== -->
+
+      <section class="pos-section">
+        <div class="pos-header">
+          <div class="left">
+            <div class="pos-left-text">
+              <h2>Portal</h2>
+              <h4>
+                YantrikaPOS - The Future<br />
+                Of Point of Sale System.
+              </h4>
+            </div>
+            <div class="highlight-box">
+              <h3>Yantrika<span>POS</span></h3>
+            </div>
+          </div>
+          <div class="pos-image">
+            <img
+              src="../assets/images/product/posInfo.png"
+              alt="YantrikaPOS System"
+            />
+          </div>
+        </div>
+        <div class="text-container">
+          <p>
+            YantrikaPOS is designed to streamline retail/restaurant operations,
+            providing businesses with the tools they need to manage their
+            operations efficiently. LithosPOS integrates with other systems such
+            as accounting software, marketing tools, inventory management
+            systems, CRM software, and other payment systems.
+          </p>
+
+          <p>
+            We integrate with over 50 payment providers and have analytical
+            account integration with SAP, Oracle Cloud, and Zoho Book. It’s used
+            by 6,000+ businesses across 70+ countries and supports 5 languages.
+            We also provide aggregator integrations with Uber Eats, DoorDash,
+            Deliveroo, GrubHub, and more.
+          </p>
+
+          <h3 class="features-title">Key Features of YantrikaPOS</h3>
+
+          <div class="features-grid">
+            <span class="feature" id="feature-portal"
+              >Inventory Management</span
+            >
+            <span class="feature" id="feature-portal"
+              >User Access Management</span
+            >
+            <span class="feature" id="feature-portal"
+              >Invoicing and Billing</span
+            >
+            <span class="feature" id="feature-portal"
+              >Logistics Management</span
+            >
+
+            <span class="feature" id="feature-portal">Recipe Management</span>
+            <span class="feature" id="feature-portal">QR & Table Booking</span>
+            <span class="feature" id="feature-portal"
+              >Zomato & Swiggy Integration</span
+            >
+            <span class="feature" id="feature-portal"
+              >Budgeting and Analytics</span
+            >
+          </div>
+        </div>
+      </section>
+    </main>
     <footer class="main-footer">
       <div class="footer-top">
         <div class="footer-quote">
@@ -142,6 +410,8 @@
         </div>
       </div>
     </footer>
+    <div class="overlay" id="overlay"></div>
+
     <script src="../js/main.js"></script>
   </body>
 </html>
