--- a/pages/privacy-policy.html
+++ b/pages/privacy-policy.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Privacy Policy</title>
-    <link rel="stylesheet" href="../css/privacyPolicy.css" />c
+    <link rel="stylesheet" href="../css/privacyPolicy.css" />
   </head>
   <body>
     <section class="privacy-container">
